--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "axios": "^0.26.1",
         "material-ui-image": "^3.3.2",
         "react": "^17.0.2",
+        "react-csv-reader": "^3.4.0",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.2.2",
         "react-scripts": "^5.0.0",
