--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
         "@testing-library/user-event": "^13.5.0",
         "axios": "^0.26.1",
         "material-ui-image": "^3.3.2",
+        "mathjs": "^10.4.2",
         "mobx": "^6.5.0",
         "mobx-react-lite": "^3.3.0",
+        "object-learning": "^1.0.5",
         "react": "^17.0.2",
         "react-csv-reader": "^3.4.0",
         "react-dom": "^17.0.2",
