SLOTH: Lots more stuff
Future work:

* Need to figure out how to get the date in LogRegProbFields.js to update with the correct date.

 I haven't been able to get this to work and it's really annoying.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "mathjs": "^10.4.2",
         "mobx": "^6.5.0",
         "mobx-react-lite": "^3.3.0",
+        "moment": "^2.29.2",
         "object-learning": "^1.0.5",
         "react": "^17.0.2",
         "react-csv-reader": "^3.4.0",
