--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@emotion/react": "^11.8.2",
         "@emotion/styled": "^11.8.1",
         "@fontsource/roboto": "^4.5.3",
+        "@mui/icons-material": "^5.6.1",
         "@mui/lab": "^5.0.0-alpha.75",
         "@mui/material": "^5.5.1",
         "@testing-library/jest-dom": "^5.16.2",
@@ -19,7 +20,6 @@
         "moment": "^2.29.2",
         "object-learning": "^1.0.5",
         "react": "^17.0.2",
-        "react-csv-reader": "^3.4.0",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.2.2",
         "react-scripts": "^5.0.0",
