SLOTH: DOOOOOOOOONE! :tada:
* Added some animations
* Cleaned up the landing page
* Added helper text for all non-intuitive buttons

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "Slothkins Beta",
-    "name": "Slow, but methodical machine learning algorithms for cryptocurrency analysis",
+    "short_name": "Slothkins Beta-2",
+    "name": "Exploring Machine Learning Algorithms for Crytocurrency Portfolio Management Applications",
     "icons": [
         {
             "src": "favicon.ico",
