--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@testing-library/react": "^12.1.4",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^0.26.1",
+        "framer-motion": "^6.3.0",
         "material-ui-image": "^3.3.2",
         "mathjs": "^10.4.2",
         "mobx": "^6.5.0",
