--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
         "@testing-library/jest-dom": "^5.16.2",
         "@testing-library/react": "^12.1.4",
         "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^29.1.2",
+        "@types/node": "^18.11.0",
+        "@types/react": "^17.0.50",
+        "@types/react-dom": "^18.0.6",
         "axios": "^0.26.1",
         "framer-motion": "^6.3.0",
         "material-ui-image": "^3.3.2",
@@ -25,6 +29,7 @@
         "react-router-dom": "^6.2.2",
         "react-scripts": "^5.0.0",
         "recharts": "^2.1.9",
+        "typescript": "^4.8.4",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
